# pytickertick

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tickertick/: __init__.py  query.py
