[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytickertick"
version = "1.0.0"
authors = [
  { name="pennacap" },
]
description = "An API wrapper for the TickerTick API in Python"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/pennacap/pytickertick"
"Bug Tracker" = "https://github.com/pennacap/pytickertick/issues"